# mata

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml  linux.Dockerfile
apps/: CMakeLists.txt  mata.cpp
cmake/: FindFilesystem.cmake  add_FetchContent_MakeAvailable.cmake
include/: app.h  renderer.h  virtual-file-system.h
include/concepts/: noncopyable.h
include/glad/: glad.h
include/mata/: app.hpp  camera.hpp  geometry.hpp  layer.hpp  lib.hpp  renderer.hpp  texture.hpp  tile_layer.hpp  tileset.hpp  types.hpp  virtual-file-system.hpp  window.hpp
include/mata/concepts/: noncopyable.hpp
include/mata/utils/: exceptions.hpp  filesystem.hpp  platform.hpp  propagate_const.hpp  time.hpp
include/utils/: filesystem.h  string.h
resources/shaders/: default.frag  default.vert
scripts/: build.bat  build.sh  install-deps.bat  install-deps.sh  install-mesa.bat  install-mesa.sh  test.bat  test.sh
src/: CMakeLists.txt  app.cpp  camera.cpp  glad.c  layer.cpp  main.cpp  renderer.cpp  texture.cpp  tile_layer.cpp  tileset.cpp  virtual-file-system.cpp  window.cpp
src/utils/: exceptions.cpp  filesystem.cpp
tests/: CMakeLists.txt  config.hpp.in  smoke.cpp  test.cpp  unit.cpp
